--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ http{
         server_nama portofolio.my.id
 
         location /.well-known/acme-challenge/ {
-            rotb /var/www/certbot;
+            root /var/www/certbot;
         }
     }
     server{
