--- a/docker.compose.yaml
+++ b/docker.compose.yaml
@@ -7,13 +7,13 @@ services:
       restart: always
       ports:
        - "3001:3001"
-      evironment:
+      environment:
        - NODE_ENV=production
        - PORT=3001
 
 cretbot:
     image: certbot/certbot:latest
     container_nama: porto_certbot
-    volume:
+    volumes:
      - ./certbot/conf:/etc/letsencrypt
      - ./certbot/www:/var/www/certbot
