--- a/docker.compose.yaml
+++ b/docker.compose.yaml
@@ -2,7 +2,7 @@ services:
     app:
       build:
         context: .
-        dokerfile: Dokerfile
+        dockerfile: Dockerfile
       container_nama: porto
       restart: always
       ports:
@@ -10,10 +10,3 @@ services:
       environment:
        - NODE_ENV=production
        - PORT=3001
-
-cretbot:
-    image: certbot/certbot:latest
-    container_nama: porto_certbot
-    volumes:
-     - ./certbot/conf:/etc/letsencrypt
-     - ./certbot/www:/var/www/certbot
