--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ events{}
 http{
     server{
         listen 80;
-        server_nama portofolio.my.id
+        server_nama dynis.my.id
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
