--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ events{}
 http{
     server{
         listen 80;
-        server_nama dynis.my.id
+        server_name pubg.dynis.my.id
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -11,7 +11,7 @@ http{
     }
     server{
         listen 443 ssl;
-        server_nama portofolio.my.id
+        server_name pubg.dynis.my.id
 
         location / {
             porxy_pass http://app:3001;
