--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,28 @@
-events{}
+events {}
 
-http{
-    server{
+http {
+    server {
         listen 80;
-        server_name pubg.dynis.my.id
+        server_name pubg.dynis.my.id;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
     }
-    server{
+
+    server {
         listen 443 ssl;
-        server_name pubg.dynis.my.id
+        server_name pubg.dynis.my.id;
+
+        ssl_certificate /etc/letsencrypt/live/pubg.dynis.my.id/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/pubg.dynis.my.id/privkey.pem;
 
         location / {
-            porxy_pass http://app:3001;
-            porxy_set_header Host $host;
-            porxy_set_header x-Real-IP $remote_addr;
-            porxy_set_header x-Forwarded-For $proxy_add_x_forwarded_for;
-            porxy_set_header x-Forwarded-proto $scheme
+            proxy_pass http://app:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
