--- a/nginx.conf
+++ b/nginx.conf
@@ -3,26 +3,11 @@ events {}
 http {
     server {
         listen 80;
-        server_name pubg.dynis.my.id;
-
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name pubg.dynis.my.id;
-
-        ssl_certificate /etc/letsencrypt/live/pubg.dynis.my.id/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/pubg.dynis.my.id/privkey.pem;
+        server_name localhost;
 
         location / {
-            proxy_pass http://app:80;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            root /usr/share/nginx/html;
+            index index.html;
         }
     }
 }
