--- a/compose.yaml
+++ b/compose.yaml
@@ -6,3 +6,9 @@ services:
     restart: always
     ports:
       - "3001:80"
+    networks:
+      - webnet
+
+networks:
+  webnet:
+    external: true
